:floppy_disk: λjcommon v1.4.7 - Bad, bad Java 10